istio-teaching/serviceentries/mongodb-se-resolution-static-multi-ep-2.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: mongodb-se
spec:
  hosts:
  - mymongodb.demo 
  ports:
  - number: 27017
    name: mongodb
    protocol: MONGO
  - number: 27018
    name: mongodb-2
    protocol: MONGO
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
  - address: 192.168.229.134
    labels:
      version: v1
  - address: 192.168.229.135
    labels:
      version: v2
