istio-teaching/serviceentries/vs-mongodb-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-mongodb
spec:
  hosts:
  - "mymongodb.demo"
  tcp:
  - match:
    - port: 27018
    route:
    - destination:
        host: mymongodb.demo
        port:
          number: 27017
        subset: v2
  - route:
    - destination:
        host: mymongodb.demo
        subset: v1
